# 100known

./: README.md
100known/: CMakeLists.txt
100known/01_SwitchChannel/: CMakeLists.txt  main.cpp  switch_channel.py
100known/02_GrayScale/: CMakeLists.txt  main.cpp  main.h
100known/03_Thresholding/: CMakeLists.txt  main.cpp  thresholding.py
100known/04_OtsuThresholding/: CMakeLists.txt  main.cpp  otsu_thresholding.py
100known/05_SwitchHsvAndRgb/: CMakeLists.txt  main.cpp  switch_hsv_and_rgb.py
100known/06_ReduceColor/: CMakeLists.txt  main.cpp
100known/07_AveragePooling/: AveragePooling.h  CMakeLists.txt  average_pooling.py  main.cpp
100known/08_MaxPooling/: CMakeLists.txt  MaxPooling.h  main.cpp  max_pooling.py
100known/09_GaussianFilter/: CMakeLists.txt  GaussianFilter.h  gaussian_filter.py  main.cpp
100known/10_MedianFilter/: CMakeLists.txt  MedianFilter.h  main.cpp
100known/11_MeanFilter/: CMakeLists.txt  MeanFilter.h  main.cpp  mean_filter.py
100known/12_MotionFilter/: CMakeLists.txt  MotionFilter.h  main.cpp  motion_filter.py
100known/13_Max-MinFilter/: CMakeLists.txt  Max-MinFilter.h  main.cpp  max-min_filter.py
100known/14_DifferentialFilter/: CMakeLists.txt  DifferentialFilter.h  differential_filter.py  main.cpp
100known/15_SobelFilter/: CMakeLists.txt  SobelFilter.h  main.cpp  sobel_filter.py
100known/16_PrewittFilter/: CMakeLists.txt  PrewittFilter.h  main.cpp  prewitt_filter.py
100known/17_LaplacianFilter/: CMakeLists.txt  LaplacianFilter.h  laplacian_filter.py  main.cpp
100known/18_EmbossFilter/: CMakeLists.txt  EmbossFilter.h  emboss_filter.py  main.cpp
100known/19_LoGFilter/: CMakeLists.txt  LoGFilter.h  LoG_filter.py  main.cpp
100known/GrayScale/: CMakeLists.txt  GrayScale.cpp  GrayScale.h  gray_scale.py
100known/OtsuThresholding/: CMakeLists.txt  OtsuThresholding.h
100known/ReduceColor/: CMakeLists.txt  reduce_color.py
100known/SwitchChannel/: CMakeLists.txt  SwitchChannel.h  main.cpp  switch_channel.py
100known/SwitchHsvAndRgb/: CMakeLists.txt  SwitchHsvAndRgb.h  switch_hsv_and_rgb.py
100known/Thresholding/: CMakeLists.txt  Thresholding.h
100known/include/: tool.h  tool.py
